Finished age down to years

--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 <body>
   <div class="countdown"></div>
   <script type="text/javascript">
-    window.birthday = prompt('What is your birthday? MM/DD/YYYY')
+    window.birthday = prompt('What is your birthday? YYYYMMDD')
     // invoke displayAge once
     displayAge()
     // invoke displayAge on an interval once a second
     setInterval(displayAge, 1000)
     function displayAge(){
-      /* 
+      /*
       Use moment() to create a new moment object from the present time
       Fix this function to display someone's exact age
       */
-      document.querySelector('.countdown').innerHTML = moment()
+      var age = moment(window.birthday, 'YYYYMMDD').fromNow();
+
+      document.querySelector('.countdown').innerHTML = age;
     }
   </script>
 </body>
